--- a/pages/prendas.html
+++ b/pages/prendas.html
@@ -52,17 +52,18 @@
     <div class="row row-cols-md-1 row-cols-md-2 g-3">
       <div class="col">
         <div class="card">
-          <img src="../imagen/conjunto con zapatos.jpeg" class="card-img-top" alt="conjunto 1">
+          <img src="../imagen/conjunto.jpeg" class="card-img-top" alt="conjunto 1">
           <div class="card-body">
             <h5 class="fw-bold fs-2">CONJUNTO 1</h5>
-            <p class="fs-3">Remera Hippie + Jean + Sandalias rosa viejo</p>
-            <p class="fs-3"><small class="text-muted">$2500</small></p>
+            <p class="fs-3">Pantalón de vestir + blusa + zapatos</p>
+            <p class="fs-3"><small class="text-muted">$2400 y te llevas de regalo un pañuelo haciendo juego (precio
+              regular $400)</small></p>
           </div>
         </div>
       </div>
       <div class="col">
         <div class="card">
-          <img src="../imagen/conjunto jean.jpeg" class="card-img-top" alt="conjunto 2">
+          <img src="../imagen/conjunto jean.jpeg" class="card-img-top" alt="conjunto 2">           
           <div class="card-body">
             <h5 class="fw-bold fs-2">CONJUNTO 2</h5>
             <p class="fs-3">CONJUNTO 2: Remera básica + Jean + Cartera</p>
@@ -116,12 +117,11 @@
       </div>
       <div class="col">
         <div class="card">
-          <img src="../imagen/conjunto.jpeg" class="card-img-top" alt="conjunto 7">
+          <img src="../imagen/conjunto con zapatos.jpeg" class="card-img-top" alt="conjunto 7">
           <div class="card-body">
             <h5 class="fw-bold fs-2">CONJUNTO 7</h5>
-            <p class="fs-3">Pantalón de vestir + blusa + zapatos</p>
-            <p class="fs-3"><small class="text-muted">$2400 y te llevas de regalo un pañuelo haciendo juego (precio
-                regular $400)</small></p>
+            <p class="fs-3">Remera Hippie + Jean + Sandalias rosa viejo</p>
+            <p class="fs-3"><small class="text-muted">$2500</small></p>
           </div>
         </div>
       </div>
@@ -137,8 +137,16 @@
       </div>
     </div>
   </main>
-  <footer class="footer">
-    <p class="creador">@ Marcela Fernanda Peralta 2022</p>
+  <footer class="footer text-center">
+    <p>@ Marcela Fernanda Peralta 2022</p>
+    <p class="fs-5"><i class="bi bi-whatsapp"></i>
+      1165137673
+    </p>
+    <p class="fs-5"><a href="https://www.instagram.com/abret_closet/"> <i class="bi bi-instagram"></i></a>
+    </p>
+    <p class="fs-5">
+      <a href="https://www.facebook.com/Abret_Closet-108710848572621"> <i class="bi bi-facebook"></i> </a>
+    </p>
   </footer>
 
   <!-- JavaScript Bundle with Popper -->
