--- a/pages/ubicacion.html
+++ b/pages/ubicacion.html
@@ -50,7 +50,7 @@
   <main class="main">
     <span class="fw-bold fs-2">UBICACIÓN</span>
     <section>
-      <div class="mapa">
+      <div class="mapa text-center">
         <img src="../imagen/ubicacion.png" class="img-fluid" alt="ubicación en el mapa">
       </div>
       <div class="card-body">
@@ -101,13 +101,22 @@
     </section>
   </main>
 
+
+  <footer class="footer text-center">
+    <p>@ Marcela Fernanda Peralta 2022</p>
+    <p class="fs-5"><i class="bi bi-whatsapp"></i>
+      1165137673
+    </p>
+    <p class="fs-5"><a href="https://www.instagram.com/abret_closet/"> <i class="bi bi-instagram"></i></a>
+    </p>
+    <p class="fs-5">
+      <a href="https://www.facebook.com/Abret_Closet-108710848572621"> <i class="bi bi-facebook"></i> </a>
+    </p>
+  </footer>
   <!-- JavaScript Bundle with Popper -->
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/js/bootstrap.bundle.min.js"
     integrity="sha384-A3rJD856KowSb7dwlZdYEkO39Gagi7vIsF0jrRAoQmDKKtQBHUuLZ9AsSv4jD4Xa"
     crossorigin="anonymous"></script>
 </body>
-<footer class="footer">
-  <p class="creador">@ Marcela Fernanda Peralta 2022</p>
-</footer>
 
 </html>
