--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
 <body>
   <main class="sectionmain">
     <section>
-      <h1 class="tituloprincipal"> <p class="fw-bold fs-1">Abret_Closet </p></h1>
+      <h1 class="fw-bold fs-1 text-center">Abret_Closet </h1>
       <div class="container text-center">
         <div class="row">
           <div class="col">
@@ -62,8 +62,8 @@
               Tenés la posibilidad de hacer circular tu placard, ayudás a que el mundo sea un lugar más
               sostenible, y además, te llevás efectivo o una prenda nueva.
             </p>
-            <img src="./imagen/tu ex.png" class="shake-little" width="270" height="400"  alt="EX">
-                      
+            <img src="./imagen/tu ex.png" class="shake-little" width="270" height="400" alt="EX">
+
           </div>
           <div class="col">
             <p class="fs-3">
@@ -71,8 +71,8 @@
               una alternativa sustentable para un vestir consciente
             </p>
             <div class="video">
-              <iframe width="300" height="300" src="./imagen/WhatsApp Video 2022-07-20 at 9.15.35 PM.mp4" title="Preventa"
-                frameborder="0"
+              <iframe width="300" height="300" src="./imagen/WhatsApp Video 2022-07-20 at 9.15.35 PM.mp4"
+                title="Preventa" frameborder="0"
                 llow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
                 allowfullscreen></iframe>
               <div class="video">
@@ -85,19 +85,28 @@
         </div>
       </div>
     </section>
-    <span class="fs-3">Ya logramos RE-CIRCULAR + DE 2.000 PRENDAS Y DONAR + DE 500.  
+    <span class="fs-3">Ya logramos RE-CIRCULAR + DE 2.000 PRENDAS Y DONAR + DE 500.
     </span>
-    
+
 
   </main>
 
-<hr>
-<footer class="footer">
-  <p class="creador">@ Marcela Fernanda Peralta 2022</p>
-</footer>
-<!-- JavaScript Bundle with Popper -->
-<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/js/bootstrap.bundle.min.js"
-  integrity="sha384-A3rJD856KowSb7dwlZdYEkO39Gagi7vIsF0jrRAoQmDKKtQBHUuLZ9AsSv4jD4Xa" crossorigin="anonymous"></script>
+  <hr>
+  <footer class="footer text-center">
+    <p>@ Marcela Fernanda Peralta 2022</p>
+    <p class="fs-5"><i class="bi bi-whatsapp"></i>
+      1165137673
+    </p>
+    <p class="fs-5"><a href="https://www.instagram.com/abret_closet/"> <i class="bi bi-instagram"></i></a>
+    </p>
+    <p class="fs-5">
+      <a href="https://www.facebook.com/Abret_Closet-108710848572621"> <i class="bi bi-facebook"></i> </a>
+    </p>
+  </footer>
+  <!-- JavaScript Bundle with Popper -->
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/js/bootstrap.bundle.min.js"
+    integrity="sha384-A3rJD856KowSb7dwlZdYEkO39Gagi7vIsF0jrRAoQmDKKtQBHUuLZ9AsSv4jD4Xa"
+    crossorigin="anonymous"></script>
 </body>
 
 </html>
