--- a/pages/contacto.html
+++ b/pages/contacto.html
@@ -117,10 +117,10 @@
             <div class="fs-2"><i class="bi bi-whatsapp"></i>
               1165137673
             </div>
-            <div class="fs-2"><a href="https://www.instagram.com/abret_closet/"> <i class="bi bi-instagram"></i></a>
+            <div class="fs-3"><a href="https://www.instagram.com/abret_closet/"> <i class="bi bi-instagram"></i></a>Abret_Closet
             </div>
-            <div>
-              <a class="fs-2" href="https://www.facebook.com/Abret_Closet-108710848572621"> <i class="bi bi-facebook"></i> </a>
+            <div  class="fs-3">
+              <a href="https://www.facebook.com/Abret_Closet-108710848572621"> <i class="bi bi-facebook"></i> </a>Abret_Closet
             </div>
             </p>
           </div>
@@ -134,7 +134,7 @@
     </section>
     <form id="form">
       <div class="field">
-        <label for="from_name">Nombre</label>
+        <label for="from_name text-center">Nombre</label>
         <input type="text" name="from_name" id="from_name">
       </div>
       <div class="field">
@@ -157,9 +157,17 @@
     <script src="../js/enviarform.js"></script>
   </main>
   <hr>
-<footer class="footer">
-  <p class="creador">@ Marcela Fernanda Peralta 2022</p>
-</footer>
+  <footer class="footer text-center">
+    <p>@ Marcela Fernanda Peralta 2022</p>
+    <p class="fs-5"><i class="bi bi-whatsapp"></i>
+      1165137673
+    </p>
+    <p class="fs-5"><a href="https://www.instagram.com/abret_closet/"> <i class="bi bi-instagram"></i></a>
+    </p>
+    <p class="fs-5">
+      <a href="https://www.facebook.com/Abret_Closet-108710848572621"> <i class="bi bi-facebook"></i> </a>
+    </p>
+  </footer>
 <!-- JavaScript Bundle with Popper -->
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/js/bootstrap.bundle.min.js"
   integrity="sha384-A3rJD856KowSb7dwlZdYEkO39Gagi7vIsF0jrRAoQmDKKtQBHUuLZ9AsSv4jD4Xa" crossorigin="anonymous"></script>
