--- a/pages/fechas.html
+++ b/pages/fechas.html
@@ -99,8 +99,16 @@
       </div>
     </div>
   </main>
-  <footer class="footer">
-    <p class="creador">@ Marcela Fernanda Peralta 2022</p>
+  <footer class="footer text-center">
+    <p>@ Marcela Fernanda Peralta 2022</p>
+    <p class="fs-5"><i class="bi bi-whatsapp"></i>
+      1165137673
+    </p>
+    <p class="fs-5"><a href="https://www.instagram.com/abret_closet/"> <i class="bi bi-instagram"></i></a>
+    </p>
+    <p class="fs-5">
+      <a href="https://www.facebook.com/Abret_Closet-108710848572621"> <i class="bi bi-facebook"></i> </a>
+    </p>
   </footer>
 
   <!-- JavaScript Bundle with Popper -->
