--- a/pages/fechas.html
+++ b/pages/fechas.html
@@ -47,7 +47,7 @@
       </div>
     </nav>
   </header>
-  <main class="main">
+  <main class="main ">
     <div class="card-group">
       <div class="card">
         <img src="../imagen/Feria1607.jpg" class="card-img-top" alt="banner 16 julio">
@@ -99,17 +99,39 @@
       </div>
     </div>
   </main>
-  <footer class="footer text-center">
-    <p>@ Marcela Fernanda Peralta 2022</p>
-    <p class="fs-5"><i class="bi bi-whatsapp"></i>
-      1165137673
-    </p>
-    <p class="fs-5"><a href="https://www.instagram.com/abret_closet/"> <i class="bi bi-instagram"></i></a>
-    </p>
-    <p class="fs-5">
-      <a href="https://www.facebook.com/Abret_Closet-108710848572621"> <i class="bi bi-facebook"></i> </a>
-    </p>
-  </footer>
+
+
+    <!------------------------------FOOTER------------------------------------->
+  
+    <footer class="footer text-center">
+      <p>©Marcela Fernanda Peralta 2022</p>
+     
+      
+      <p class="fs-5"><i class="bi bi-whatsapp"></i>
+        11-3157-1506
+      </p>
+      <!--link para whatsapp no funciona, buscar otro
+      <div class="whatsapp">
+                          <a href="https://wa.me/+5492235498853?" target="_blank"> 
+                          <img src="/src/assets/Whatsapp_37229.png">
+                          </a></div>
+      -->
+  
+  
+      <p class="fs-5"><a href="https://www.instagram.com/abret_closet/"> <i class="bi bi-instagram"></i></a>
+      </p>
+  
+      <p class="fs-5">
+        <a href="https://www.facebook.com/Abret_Closet-108710848572621"> <i class="bi bi-facebook"></i> </a>
+      </p>
+  
+      <div>
+        <ul>
+            <li id="contacto">e-mail:</li>
+            <li> abret.closet@gmail.com  </li>
+        </ul>
+     </div> 
+    </footer>
 
   <!-- JavaScript Bundle with Popper -->
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/js/bootstrap.bundle.min.js"
