--- a/pages/ubicacion.html
+++ b/pages/ubicacion.html
@@ -12,41 +12,43 @@
   <meta name="description" content="ubicación para comprar ropa usada">
   <meta name="keyword" content="ROPA USADA, ROPA, VENTA DE ROPA, SAN MIGUEL, COMPRA Y VENTA, CONSIGNACION">
 </head>
-<header>
-  <nav class="navbar navbar-expand-lg bg-light">
-    <div class="container-fluid">
-      <a class="navbar-brand" href="#">Abret_Closet</a>
-      <a class="navbar-brand" href="#">
-        <img src="../imagen/LOGO.jpg" alt="logodelemprendimiento" width="30" height="24"
-          class="d-inline-block align-text-top"> </a>
-      <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
-        aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-        <span class="navbar-toggler-icon"></span>
-      </button>
-      <div class="collapse navbar-collapse" id="navbarNav">
-        <ul class="navbar-nav">
-          <li class="nav-item">
-            <a class="nav-link active" aria-current="page" href=" ../index.html">Inicio</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" href="../pages/prendas.html">Prendas</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" href="../pages/fechas.html">Fechas</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" href="../pages/ubicacion.html">Ubicación</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" href="../pages/contacto.html">Nosotros</a>
-          </li>
-        </ul>
-      </div>
-    </div>
-  </nav>
-</header>
+
 
 <body class="body">
+  <header>
+    <nav class="navbar navbar-expand-lg bg-light">
+      <div class="container-fluid">
+        <a class="navbar-brand" href="#">Abret_Closet</a>
+        <a class="navbar-brand" href="#">
+          <img src="../imagen/LOGO.jpg" alt="logodelemprendimiento" width="30" height="24"
+            class="d-inline-block align-text-top"> </a>
+        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
+          aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+          <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse" id="navbarNav">
+          <ul class="navbar-nav">
+            <li class="nav-item">
+              <a class="nav-link active" aria-current="page" href=" ../index.html">Inicio</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="../pages/prendas.html">Prendas</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="../pages/fechas.html">Fechas</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="../pages/ubicacion.html">Ubicación</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="../pages/contacto.html">Nosotros</a>
+            </li>
+          </ul>
+        </div>
+      </div>
+    </nav>
+  </header>
+  
   <main class="main">
     <span class="fw-bold fs-2">UBICACIÓN</span>
     <section>
@@ -102,17 +104,40 @@
   </main>
 
 
-  <footer class="footer text-center">
-    <p>@ Marcela Fernanda Peralta 2022</p>
-    <p class="fs-5"><i class="bi bi-whatsapp"></i>
-      1165137673
-    </p>
-    <p class="fs-5"><a href="https://www.instagram.com/abret_closet/"> <i class="bi bi-instagram"></i></a>
-    </p>
-    <p class="fs-5">
-      <a href="https://www.facebook.com/Abret_Closet-108710848572621"> <i class="bi bi-facebook"></i> </a>
-    </p>
-  </footer>
+ 
+    <!------------------------------FOOTER------------------------------------->
+  
+    <footer class="footer text-center">
+      <p>©Marcela Fernanda Peralta 2022</p>
+     
+      
+      <p class="fs-5"><i class="bi bi-whatsapp"></i>
+        11-3157-1506
+      </p>
+      <!--link para whatsapp no funciona, buscar otro
+      <div class="whatsapp">
+                          <a href="https://wa.me/+5492235498853?" target="_blank"> 
+                          <img src="/src/assets/Whatsapp_37229.png">
+                          </a></div>
+      -->
+  
+  
+      <p class="fs-5"><a href="https://www.instagram.com/abret_closet/"> <i class="bi bi-instagram"></i></a>
+      </p>
+  
+      <p class="fs-5">
+        <a href="https://www.facebook.com/Abret_Closet-108710848572621"> <i class="bi bi-facebook"></i> </a>
+      </p>
+  
+      <div>
+        <ul>
+            <li id="contacto">e-mail:</li>
+            <li> abret.closet@gmail.com  </li>
+        </ul>
+     </div> 
+    </footer>
+
+
   <!-- JavaScript Bundle with Popper -->
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/js/bootstrap.bundle.min.js"
     integrity="sha384-A3rJD856KowSb7dwlZdYEkO39Gagi7vIsF0jrRAoQmDKKtQBHUuLZ9AsSv4jD4Xa"
