--- a/pages/prendas.html
+++ b/pages/prendas.html
@@ -17,7 +17,7 @@
 
 <body>
   <header>
-    <nav class="navbar navbar-expand-lg bg-light">
+    <nav class="navbar navbar-expand-lg">
       <div class="container-fluid">
         <a class="navbar-brand" href="#">Abret_Closet</a>
         <a class="navbar-brand" href="#">
