--- a/pages/ubicacion.html
+++ b/pages/ubicacion.html
@@ -16,7 +16,7 @@
 
 <body class="body">
   <header>
-    <nav class="navbar navbar-expand-lg bg-light">
+    <nav class="navbar navbar-expand-lg">
       <div class="container-fluid">
         <a class="navbar-brand" href="#">Abret_Closet</a>
         <a class="navbar-brand" href="#">
